bindings/ocaml/kaya_runtime.ml

(* kaya runtime for OCaml guests: loading, the direct-ring occurrence loop,
   and submit. *)

open Ctypes
open Foreign

let library_path () =
  match Sys.getenv_opt "KAYA_LIB" with
  | Some lib -> lib
  | None ->
      let candidates =
        [ "target/debug/libkaya.dylib"; "target/debug/libkaya.so" ]
      in
      (try List.find Sys.file_exists candidates
       with Not_found ->
         failwith "libkaya not found; build with cargo or set KAYA_LIB")

let lib = Dl.dlopen ~filename:(library_path ()) ~flags:[ Dl.RTLD_NOW ]

(* KayaRingInfo, as declared in kaya.h. *)
type ring_info
let ring_info : ring_info structure typ = structure "KayaRingInfo"
let ri_data = field ring_info "data" (ptr uint8_t)
let ri_capacity = field ring_info "capacity" uint32_t
let ri_head = field ring_info "head" (ptr uint32_t)
let ri_tail = field ring_info "tail" (ptr uint32_t)
let () = seal ring_info

let kaya_run =
  foreign ~from:lib ~release_runtime_lock:true "kaya_run"
    (void @-> returning int32_t)

let kaya_occurrence_ring =
  foreign ~from:lib "kaya_occurrence_ring" (ptr ring_info @-> returning void)

let kaya_wait_occurrences =
  foreign ~from:lib ~release_runtime_lock:true "kaya_wait_occurrences"
    (void @-> returning bool)

let kaya_wake = foreign ~from:lib "kaya_wake" (void @-> returning void)

(* Return the app thread from wait_occurrences. Safe from any thread;
   guests do not name it. *)
let wake () = kaya_wake ()

(* Block until there MAY be something to do: a record arrived, or another
   thread called wake. *)
let wait_occurrences () = kaya_wait_occurrences ()

let kaya_submit =
  foreign ~from:lib "kaya_submit" (string @-> size_t @-> returning void)

let kaya_blob_register =
  foreign ~from:lib "kaya_blob_register"
    (string @-> size_t @-> returning uint64_t)

(* The asset surface (docs/assets-plan.md). [string] carries the name's
   bytes with the length beside it: no NUL terminator is involved. *)
let kaya_asset_open =
  foreign ~from:lib "kaya_asset_open" (string @-> size_t @-> returning uint64_t)

let kaya_asset_bytes =
  foreign ~from:lib "kaya_asset_bytes"
    (uint64_t @-> ptr size_t @-> returning (ptr char))

let kaya_asset_blob =
  foreign ~from:lib "kaya_asset_blob" (uint64_t @-> returning uint64_t)

let kaya_asset_release =
  foreign ~from:lib "kaya_asset_release" (uint64_t @-> returning void)

let kaya_asset_why_not =
  foreign ~from:lib "kaya_asset_why_not"
    (string @-> size_t @-> ptr char @-> size_t @-> returning size_t)

(* The app's own places (docs/tasks-s4-plan.md §4): the data directory
   and the typed preferences store. [string] carries bytes with the
   length beside them; no NUL terminator is involved. *)
let kaya_app_data_dir =
  foreign ~from:lib "kaya_app_data_dir"
    (ptr char @-> size_t @-> returning size_t)

let kaya_pref_get_string =
  foreign ~from:lib "kaya_pref_get_string"
    (string @-> size_t @-> ptr char @-> size_t @-> ptr size_t
    @-> returning int)

(* The formatter door and the catalog (docs/compliance-plan.md §3; the C
   API's fill shape: ask with cap 0, size, ask again). *)
let kaya_fmt_date =
  foreign ~from:lib "kaya_fmt_date"
    (int64_t @-> int64_t @-> ptr char @-> size_t @-> returning size_t)

let kaya_fmt_date_weekday =
  foreign ~from:lib "kaya_fmt_date_weekday"
    (int64_t @-> ptr char @-> size_t @-> returning size_t)

let kaya_fmt_time =
  foreign ~from:lib "kaya_fmt_time"
    (int64_t @-> int64_t @-> ptr char @-> size_t @-> returning size_t)

let kaya_fmt_date_time =
  foreign ~from:lib "kaya_fmt_date_time"
    (int64_t @-> int64_t @-> int64_t @-> ptr char @-> size_t
    @-> returning size_t)

type number_options
let number_options : number_options structure typ = structure "KayaNumberOptions"
let no_min = field number_options "min_fraction_digits" int32_t
let no_max = field number_options "max_fraction_digits" int32_t
let no_grouping = field number_options "grouping" bool
let () = seal number_options

let kaya_fmt_number =
  foreign ~from:lib "kaya_fmt_number"
    (double @-> ptr number_options @-> ptr char @-> size_t @-> returning size_t)

let kaya_fmt_percent =
  foreign ~from:lib "kaya_fmt_percent"
    (double @-> ptr number_options @-> ptr char @-> size_t @-> returning size_t)

let kaya_fmt_currency =
  foreign ~from:lib "kaya_fmt_currency"
    (double @-> string @-> ptr char @-> size_t @-> returning size_t)

let kaya_locale =
  foreign ~from:lib "kaya_locale" (ptr char @-> size_t @-> returning size_t)

let kaya_direction = foreign ~from:lib "kaya_direction" (void @-> returning uint32_t)
let kaya_text_scale = foreign ~from:lib "kaya_text_scale" (void @-> returning double)
let kaya_catalog = foreign ~from:lib "kaya_catalog" (string @-> returning void)

type tr_arg_c
let tr_arg_c : tr_arg_c structure typ = structure "KayaTrArg"
let ta_name = field tr_arg_c "name" (ptr char)
let ta_tag = field tr_arg_c "tag" uint32_t
let ta_i = field tr_arg_c "i" int64_t
let ta_f = field tr_arg_c "f" double
let ta_s = field tr_arg_c "s" (ptr char)
let () = seal tr_arg_c

let kaya_tr =
  foreign ~from:lib "kaya_tr"
    (string @-> ptr tr_arg_c @-> size_t @-> ptr char @-> size_t @-> returning size_t)

(* Ask with cap 0, size, ask again; [None] is the core's fault (it printed
   the sentence), never a legitimately empty answer. *)
let fill (ask : char ptr -> Unsigned.size_t -> Unsigned.size_t) =
  let len =
    Unsigned.Size_t.to_int
      (ask (Ctypes.from_voidp Ctypes.char Ctypes.null) (Unsigned.Size_t.of_int 0))
  in
  if len = 0 then None
  else begin
    let buf = CArray.make char len in
    let written =
      Unsigned.Size_t.to_int (ask (CArray.start buf) (Unsigned.Size_t.of_int len))
    in
    Some (String.init (min written len) (fun i -> CArray.get buf i))
  end

let fmt_date packed length = fill (kaya_fmt_date packed (Int64.of_int length))
let fmt_date_weekday packed = fill (kaya_fmt_date_weekday packed)
let fmt_time packed length = fill (kaya_fmt_time packed (Int64.of_int length))

let fmt_date_time date time length =
  fill (kaya_fmt_date_time date time (Int64.of_int length))

let with_number_options min max grouping ask =
  let o = make number_options in
  setf o no_min (Int32.of_int min);
  setf o no_max (Int32.of_int max);
  setf o no_grouping grouping;
  fill (ask (addr o))

let fmt_number value min max grouping =
  with_number_options min max grouping (kaya_fmt_number value)

let fmt_percent value min max grouping =
  with_number_options min max grouping (kaya_fmt_percent value)

let fmt_currency value code = fill (kaya_fmt_currency value code)
let locale_line () = fill kaya_locale
let direction_bit () = Unsigned.UInt32.to_int (kaya_direction ())
let text_scale () = kaya_text_scale ()
let catalog app = kaya_catalog app

type tr_arg =
  | Tr_int of int64
  | Tr_float of float
  | Tr_str of string
  | Tr_date of int64
  | Tr_time of int64

(* A C string the GC cannot move: a char array, kept alive past the call. *)
let c_string s =
  let n = String.length s in
  let a = CArray.make char (n + 1) in
  String.iteri (fun i c -> CArray.set a i c) s;
  CArray.set a n '\000';
  a

let tr key args =
  let n = List.length args in
  let records = CArray.make tr_arg_c (max n 1) in
  let keep = ref [] in
  List.iteri
    (fun idx (name, arg) ->
      let r = CArray.get records idx in
      let name_c = c_string name in
      keep := name_c :: !keep;
      setf r ta_name (CArray.start name_c);
      setf r ta_i 0L;
      setf r ta_f 0.0;
      setf r ta_s (Ctypes.from_voidp Ctypes.char Ctypes.null);
      (match arg with
       | Tr_int i -> setf r ta_tag (Unsigned.UInt32.of_int 0); setf r ta_i i
       | Tr_float f -> setf r ta_tag (Unsigned.UInt32.of_int 1); setf r ta_f f
       | Tr_str s ->
           let s_c = c_string s in
           keep := s_c :: !keep;
           setf r ta_tag (Unsigned.UInt32.of_int 2);
           setf r ta_s (CArray.start s_c)
       | Tr_date d -> setf r ta_tag (Unsigned.UInt32.of_int 3); setf r ta_i d
       | Tr_time t -> setf r ta_tag (Unsigned.UInt32.of_int 4); setf r ta_i t);
      CArray.set records idx r)
    args;
  let answer =
    fill (kaya_tr key (CArray.start records) (Unsigned.Size_t.of_int n))
  in
  ignore (Sys.opaque_identity !keep);
  answer

let kaya_pref_get_i64 =
  foreign ~from:lib "kaya_pref_get_i64"
    (string @-> size_t @-> ptr int64_t @-> returning int)

let kaya_pref_get_f64 =
  foreign ~from:lib "kaya_pref_get_f64"
    (string @-> size_t @-> ptr double @-> returning int)

let kaya_pref_get_bool =
  foreign ~from:lib "kaya_pref_get_bool"
    (string @-> size_t @-> ptr uint8_t @-> returning int)

let kaya_pref_set_string =
  foreign ~from:lib "kaya_pref_set_string"
    (string @-> size_t @-> string @-> size_t @-> returning void)

let kaya_pref_set_i64 =
  foreign ~from:lib "kaya_pref_set_i64"
    (string @-> size_t @-> int64_t @-> returning void)

let kaya_pref_set_f64 =
  foreign ~from:lib "kaya_pref_set_f64"
    (string @-> size_t @-> double @-> returning void)

let kaya_pref_set_bool =
  foreign ~from:lib "kaya_pref_set_bool"
    (string @-> size_t @-> uint8_t @-> returning void)

let kaya_pref_remove =
  foreign ~from:lib "kaya_pref_remove" (string @-> size_t @-> returning void)

(* The app's own writable directory, [None] before one exists. SIZED,
   THEN READ, [asset_miss_sentence]'s two-call shape. *)
let app_data_dir () =
  let len =
    Unsigned.Size_t.to_int
      (kaya_app_data_dir
         (Ctypes.from_voidp Ctypes.char Ctypes.null)
         (Unsigned.Size_t.of_int 0))
  in
  if len = 0 then None
  else begin
    let buf = CArray.make char len in
    let written =
      Unsigned.Size_t.to_int
        (kaya_app_data_dir (CArray.start buf) (Unsigned.Size_t.of_int len))
    in
    Some (String.init (min written len) (fun i -> CArray.get buf i))
  end

let pref_get_string key =
  let n = Unsigned.Size_t.of_int (String.length key) in
  let len = allocate size_t (Unsigned.Size_t.of_int 0) in
  if
    kaya_pref_get_string key n
      (Ctypes.from_voidp Ctypes.char Ctypes.null)
      (Unsigned.Size_t.of_int 0) len
    = 0
  then None
  else
    let want = Unsigned.Size_t.to_int !@len in
    if want = 0 then Some ""
    else begin
      let buf = CArray.make char want in
      if
        kaya_pref_get_string key n (CArray.start buf)
          (Unsigned.Size_t.of_int want) len
        = 0
      then None
      else
        let got = min (Unsigned.Size_t.to_int !@len) want in
        Some (String.init got (fun i -> CArray.get buf i))
    end

let pref_get_i64 key =
  let out = allocate int64_t 0L in
  if kaya_pref_get_i64 key (Unsigned.Size_t.of_int (String.length key)) out = 0
  then None
  else Some !@out

let pref_get_f64 key =
  let out = allocate double 0.0 in
  if kaya_pref_get_f64 key (Unsigned.Size_t.of_int (String.length key)) out = 0
  then None
  else Some !@out

let pref_get_bool key =
  let out = allocate uint8_t Unsigned.UInt8.zero in
  if kaya_pref_get_bool key (Unsigned.Size_t.of_int (String.length key)) out = 0
  then None
  else Some (Unsigned.UInt8.to_int !@out <> 0)

let pref_set_string key value =
  kaya_pref_set_string key
    (Unsigned.Size_t.of_int (String.length key))
    value
    (Unsigned.Size_t.of_int (String.length value))

let pref_set_i64 key value =
  kaya_pref_set_i64 key (Unsigned.Size_t.of_int (String.length key)) value

let pref_set_f64 key value =
  kaya_pref_set_f64 key (Unsigned.Size_t.of_int (String.length key)) value

let pref_set_bool key value =
  kaya_pref_set_bool key
    (Unsigned.Size_t.of_int (String.length key))
    (Unsigned.UInt8.of_int (if value then 1 else 0))

let pref_remove key =
  kaya_pref_remove key (Unsigned.Size_t.of_int (String.length key))

let kaya_occurrence_blob =
  foreign ~from:lib "kaya_occurrence_blob"
    (uint64_t @-> ptr size_t @-> returning (ptr char))

let kaya_occurrence_blob_release =
  foreign ~from:lib "kaya_occurrence_blob_release" (uint64_t @-> returning void)
